crates/cadenza-compiler/test-data/semantics/compound-types-error-negative-index.expected
error: negative index
 --> test.cdz:2:6
  |
2 | nums[-1]
  |      ^^ indices must be non-negative
  |
  = help: use `List.last` to access the last element